Fix Whitespace

--- a/src/styles/LabelingWorkflowStyles.scss
+++ b/src/styles/LabelingWorkflowStyles.scss
@@ -110,11 +110,6 @@
     padding: 2px 4px;
 }
 
-
-/* .sstc-visibility-button.on
-{
-} */
-
 .sstc-visibility-button.mixed {
     background: grey;
 }
